test/parser.d/invalid/reassign6.souc.bad
import thingy

main() = do
	thingy = 3
	print $thingy
